[package]
edition = "2021"
name = "hitbox-tower"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
description = "Hitbox integration for Tower framework"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = [
    "caching",
    "asynchronous",
    "network-programming",
    "web-programming",
]
keywords = ["cache", "tower", "async", "http", "hitbox"]

[dependencies]
tower = { workspace = true }
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-http = { path = "../hitbox-http", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
hitbox-moka = { path = "../hitbox-moka", version = "0.1" }
# hitbox-stretto = { path = "../hitbox-stretto", version = "0.1" }
hyper = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async", "async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "cache_service_benchmark"
harness = false
