[package]
name = "hitbox"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2021"
description = "Asynchronous caching framework."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]

[dependencies]
hitbox-core = { path = "../hitbox-core", version = "0.1.0" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
thiserror = "1"
metrics = { version = "0.23", optional = true }
lazy_static = { version = "1", optional = true }
tracing = "0.1"
async-trait = "0.1.52"
pin-project = "1"
futures = { version = "0.3", features = ["alloc"], default-features = false }

[features]
default = []

metrics = ["dep:metrics", "lazy_static"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
