[package]
name = "redis-actor"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>"]
edition = "2018"
description = "Actix redis interaction actor."
license-file = "LICENSE"
workspace = ".."

[dependencies]
actix = "0.9"
log = "0.4"
redis = { version = "0.14", features = ["tokio-rt-core"] }
actix_derive = "0.5"
actix-rt = "1.0.0"

[dev-dependencies]
tokio = { version = "0.2.9", features = ["time"] }
